# core

./: .dockerignore  .gitignore  AGENTS.md  AI_AGENTS_README.md  BLOCKCHAIN_ENHANCEMENTS.md  BLOCKCHAIN_IMPROVEMENTS.md  Dockerfile.build  Dockerfile.simple  Dockerfile.stateset  FINAL_IMPROVEMENT_SUMMARY.md  IMPROVEMENT_ROADMAP.md  LICENSE  MAJOR_BLOCKCHAIN_IMPROVEMENTS_2024.md  Makefile  NETWORK_IMPROVEMENTS.md  ORDERS_STABLECOINS_IMPLEMENTATION.md  SSUSD_CONSERVATIVE_RESERVES.md  SSUSD_IMPLEMENTATION_GUIDE.md  SSUSD_IMPROVEMENTS_SUMMARY.md  SSUSD_RESERVE_IMPLEMENTATION_SUMMARY.md  STABLECOIN_IMPLEMENTATION_STATUS.md  STABLECOIN_IMPLEMENTATION_SUMMARY.md  STABLECOIN_PAYMENTS_GUIDE.md  TEST_COVERAGE_SUMMARY.md  architecture_overview.md  blockchain-client.sh  build-workaround.sh  config.yml  config_2.yml  docker-build.sh  docker-compose-native.yml  docker-compose-stateset.yml  docker-compose.yml  fix_accounts.py  fix_all_imports.sh  fix_config.py  fix_context_final_v2.py  fix_context_v2.py  fix_ctx_final.py  fix_imports.sh  (+10 more)
.github/workflows/: security-scan.yml  test-coverage.yml
.gocache/00/: 000a1c0da1bc3322b2e0382cbd4ebd6818621aceb13a1efe9f26afb2e1ccdbdc-a
.gocache/01/: 010ef951891ac844a3a6cef02d81b5c22478c4e5d3752d2a746d16d54cffb7e5-a  01b6a28edd14ddc0ed1fc0e380fc2688430fc150c51bb64773ed8b5b8180b127-a
.gocache/02/: 021d0a6e622d2ec5fb56e805dcc5b6589294cc610e215f55f25b082f652b084c-a
.gocache/03/: 035fa1f4ddffefa627b02b2fc6b6bef1100e35896211af6c82fb0a3a44f16545-a  038aef57d24a6e205c786f9d16121bcbf9a6847f6f4485f9ff83327c07bd8e85-a
.gocache/04/: 0463aa7f29a23b3f5a68d99d1851f7cb9b3ad12d769adbf4daeb668a6863cdf3-a  04b8e9ede10c0a96f4f4e703f75b6c70dc543d728757d19cf7ef50071ad0a291-d  04da8fe89489c5b6ad2f139eecc089ee122c1cef7b7e4115a528652844ae8e4d-a
.gocache/05/: 05d7cb8fc557808ec8e61e695d165a3ea752a94f36c82bd541a29f7cead5940f-d
.gocache/07/: 076cb99d8c352395dc0d14570834f02d9573bdbd29a11bb604a9d919ecf325c1-a  0770418b0bd70de5965960d1fadf13bfe5ac6831e162b07fa5be5bf593e359e1-d
.gocache/08/: 08579eb377d484b34f75201cb1e33b46acad72364dd8631407a166ea7086931b-d  089b1f13f584cae584adbf41f4d4840855563da9ae47766b161305b59a6fb775-a
.gocache/09/: 0914b8571aebe754916882b5aef8116a472be31da83700c4fc3780d7f17d46cc-d  09b667347e86844e275ae58d76d638d3707ea618541b66ab9055624cdedbcf26-a
.gocache/0a/: 0a41af6fb00d864bd412f90ed05fb0c9e2de3fe5253c768898c3283287990705-d  0a66e5db75751444ba2f6dceab5860d64bb77efe38dd87b57a4802129512ce6e-d
.gocache/0b/: 0b037461164c6a957917cfca57b58a3ca56d11284b263923439a0cea67139c29-d  0b10314697aad305695fb0b749d0b4d7fe3965acfc7046e961e185ffef648e05-a  (+2 more)
app/: adaptive_gas_pricing.go  advanced_security_compliance.go  ai_transaction_optimizer.go  ante.go  ante_handler.go  app.go  batch_processor.go  blockchain_enhancements.go  circuit_ante.go  cross_chain_bridge.go  enhanced_blockchain_orchestrator.go  export.go  keepers.go  module_config.go  next_gen_blockchain.go  performance_monitor.go  quantum_consensus.go  sharding_engine.go  state_cache.go  state_pruning.go  store_keys.go  wasm_config.go  zk_verifier.go
config/: consensus_optimization.go
contracts/ai-agents/: Cargo.toml
contracts/ai-agents/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  utils.rs
contracts/stablecoin/: Cargo.toml
contracts/stablecoin/src/: lib.rs
cosmwasm/: Cargo.toml
cosmwasm/contracts/stateset-escrow/: Cargo.toml
cosmwasm/contracts/stateset-escrow/src/: contract.rs  error.rs  lib.rs  migrate.rs  security.rs  tests.rs
cosmwasm/contracts/stateset-loan/: Cargo.toml
cosmwasm/contracts/stateset-loan/src/: helpers.rs
cosmwasm/contracts/stateset-workgroup/: Cargo.toml
cosmwasm/contracts/stateset-workgroup/src/: contract.rs
docs/: 10-10-execution-plan.md  AUDIT.md  SECURITY.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_CHECKLIST.md  SECURITY_REVIEW_SUMMARY.md  TOKENOMICS.md  cli-guide.md  fee-market-gas-oracle.md  security_architecture.md  settlement-architecture.md
scripts/: build-fix.sh  deploy_and_monitor.sh  generate_api_docs.go  init-chain.sh  run-stateset.sh  stateset-wrapper.sh
tests/: integration_test.go
tools/: tools.go
utils/: utils.go
vue/: package-lock.json
x/: README.md
(+1528 files in other folders)
