[package]
name = "ai-agent-registry"
version = "1.0.0"
authors = ["StateSet"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cosmwasm-storage = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
cw-utils = "1.0"

[dev-dependencies]
cw-multi-test = "0.20"