[package]
name = "stateset-escrow"
version = "0.0.7"
authors = ["Dom Steil <dom@stateset.io>"]
edition = "2021"
description = "Stateset Escrow contract"
license = "Apache-2.0"
repository = "https://github.com/stateset/stateset-contracts"
homepage = "https://app.stateset.zone"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw20 = "1.0.1"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.20.0"
cw20-base = { version = "1.0.1", features = ["library"] }
anyhow = "1.0.79"