[package]
name = "stateset-loan"
version = "0.0.7"
authors = ["Dom Steil <dom@stateset.io>"]
edition = "2021"
description = "Stateset Loan contract"
license = "Apache-2.0"
repository = "https://github.com/stateset/stateset-contracts"
homepage = "https://app.stateset.zone"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw-utils = "1.0.3"
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.56" }
stateset-loan-types = { path = "../../../packages/stateset-loan-types" }
stateset-health = { path = "../../../packages/stateset-health" }
stateset-owner = { path = "../../../packages/stateset-owner" }
stateset-utils = { path = "../../../packages/stateset-utils" }

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.20.0"
anyhow = "1.0.79"