[package]
name = "stateset-workgroup"
version = "0.0.1"
authors = ["Dom Steil <dom@stateset.io>"]
edition = "2021"
description = "Stateset Workgroup contract"
license = "Apache-2.0"
repository = "https://github.com/stateset/stateset-contracts"
homepage = "https://app.stateset.zone"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw-utils = "1.0.3"
cw-controllers = "1.1.2"
workgroup = { version = "0.10.0" }
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.56" }

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.20.0"
anyhow = "1.0.79"
